[gd_scene load_steps=2 format=3 uid="uid://bvuvdubi3uwau"]

[ext_resource type="Script" path="res://AdminControl/QuizEditor/QuestionEditor/question_editor.gd" id="1_okcoi"]

[node name="Question" type="Control"]
custom_minimum_size = Vector2(1015, 330)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_okcoi")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
offset_top = -4.0
offset_right = 1015.0
offset_bottom = -4.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
color = Color(0.2, 0.223529, 0.254902, 0.811765)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(860, 0)
layout_mode = 2

[node name="QuestionNumber" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "01"

[node name="SaveButton" type="Button" parent="MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="DeleteButton" type="Button" parent="MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Delete"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
color = Color(0.278431, 0.298039, 0.32549, 0.819608)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ColorRect"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
offset_top = -4.0
offset_right = 975.0
offset_bottom = -4.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="QuestionBox" type="LineEdit" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ColorRect/MarginContainer"]
layout_mode = 2
placeholder_text = "Input Question Here"
expand_to_text_length = true
flat = true
caret_blink = true

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
color = Color(0.278431, 0.298039, 0.32549, 0.819608)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3/ColorRect"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
offset_top = -4.0
offset_right = 975.0
offset_bottom = -4.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3/ColorRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3/ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "A."

[node name="ChoiceA" type="LineEdit" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(935, 0)
layout_mode = 2
placeholder_text = "Input Choice A Here"
expand_to_text_length = true
flat = true

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer4"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
color = Color(0.278431, 0.298039, 0.32549, 0.819608)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer4/ColorRect"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
offset_top = -4.0
offset_right = 975.0
offset_bottom = -4.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer4/ColorRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer4/ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "B."

[node name="ChoiceB" type="LineEdit" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer4/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(935, 0)
layout_mode = 2
placeholder_text = "Input Choice B Here"
expand_to_text_length = true
flat = true

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer5"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
color = Color(0.278431, 0.298039, 0.32549, 0.819608)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer5/ColorRect"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
offset_top = -4.0
offset_right = 975.0
offset_bottom = -4.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer5/ColorRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer5/ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "C."

[node name="ChoiceC" type="LineEdit" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer5/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(935, 0)
layout_mode = 2
placeholder_text = "Input Choice C Here"
expand_to_text_length = true
flat = true

[node name="MarginContainer6" type="MarginContainer" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer6"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
color = Color(0.278431, 0.298039, 0.32549, 0.819608)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer6/ColorRect"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
offset_top = -4.0
offset_right = 975.0
offset_bottom = -4.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer6/ColorRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer6/ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "D."

[node name="ChoiceD" type="LineEdit" parent="MarginContainer2/MarginContainer/VBoxContainer/MarginContainer6/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(935, 0)
layout_mode = 2
placeholder_text = "Input Choice D Here"
expand_to_text_length = true
flat = true

[connection signal="pressed" from="MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
